note about "start over" added to each tutorial.

--- a/inst/tutorials/03conceptual/conceptual.Rmd
+++ b/inst/tutorials/03conceptual/conceptual.Rmd
@@ -147,6 +147,8 @@ question("What would be a good currency for a model that describes the dependenc
 
 ## More exercises
 
+If you finished this tutorial but some of your answers were incorrect, you are encouraged to do the quiz again. You can do this by clicking on <span style="color:red">**Start Over**</span> at the bottom of the menu to the left.
+
 More exercises on creating conceptual models can be found in the R-package RTM. Type the following commands in the R console to see these exercises:
 
 ```
