--- a/inst/tutorials/07chemical/chemical.Rmd
+++ b/inst/tutorials/07chemical/chemical.Rmd
@@ -187,6 +187,8 @@ plot(out, out2, out3, lty=1, col=1:3)
 
 ## More exercises
 
+If you finished this tutorial but some of your answers were incorrect, you are encouraged to do the quiz again. You can do this by clicking on <span style="color:red">**Start Over**</span> at the bottom of the menu to the left.
+
 To learn more about modelling of chemical reactions --- and specifically of irreversible elementary chemical reactions --- try to solve the *ozone* model available in the R-package RTM. To display this exercise, type the following commands in the R-console:
 
 ```
