--- a/inst/tutorials/10partitioning/partitioning.Rmd
+++ b/inst/tutorials/10partitioning/partitioning.Rmd
@@ -209,6 +209,8 @@ question("Does the maximum number of goldfish in the pond depend on the height o
 
 ## More exercises
 
+If you finished this tutorial but some of your answers were incorrect, you are encouraged to do the quiz again. You can do this by clicking on <span style="color:red">**Start Over**</span> at the bottom of the menu to the left.
+
 To learn more about modelling of partitioning between phases, solve additional exercises available in the R-package RTM. To display these exercises, type the following command in the R-console:
 
 ```
