--- a/inst/tutorials/01introduction/introduction.Rmd
+++ b/inst/tutorials/01introduction/introduction.Rmd
@@ -137,6 +137,10 @@ question("Which type of models are we going to develop in this course?", type = 
 )
 ```
 
+## Start over
+
+If you finished this tutorial but some of your answers were incorrect, you are encouraged to do the quiz again. You can do this by clicking on <span style="color:red">**Start Over**</span> at the bottom of the menu to the left.
+
 ## Textbook and Slides
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
