--- a/inst/tutorials/02why/why.Rmd
+++ b/inst/tutorials/02why/why.Rmd
@@ -113,6 +113,10 @@ question("In this course we will ...", type = "learnr_checkbox",
  correct=msg)
 ```
 
+## Start over
+
+If you finished this tutorial but some of your answers were incorrect, you are encouraged to do the quiz again. You can do this by clicking on <span style="color:red">**Start Over**</span> at the bottom of the menu to the left.
+
 ## Textbook and Slides
 
 Karline Soetaert, Peter M.J. Herman (2009). A Practical Guide to Ecological Modelling. Springer Netherlands. DOI: 10.1007/978-1-4020-8624-3.
