--- a/inst/tutorials/12transportProcesses/transportProcesses.Rmd
+++ b/inst/tutorials/12transportProcesses/transportProcesses.Rmd
@@ -159,6 +159,8 @@ question("When does the above equation apply?", type = "learnr_checkbox",
 
 ## Learn more
 
+If you finished this tutorial but some of your answers were incorrect, you are encouraged to do the quiz again. You can do this by clicking on <span style="color:red">**Start Over**</span> at the bottom of the menu to the left.
+
 Continue this tutorial series by learning about different types of transport fluxes:
 
 ```
